--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Diskill Message — Instalar no Tampermonkey</title>
   <meta name="description" content="Apaga somente suas mensagens em um canal ou DM no Discord (exclusão em massa)." />
 
-  <!-- Open Graph (preview ao compartilhar) -->
+  <!-- Open Graph preview - Duvidas ? Discord: @tur.ko // -->
   <meta property="og:title" content="Diskill Message — Tampermonkey" />
   <meta property="og:description" content="Apaga somente suas mensagens em um canal ou DM no Discord (exclusão em massa)." />
   <meta property="og:type" content="website" />
@@ -227,7 +227,7 @@
       to{opacity:1;transform:translateY(0)}
     }
 
-    /* Icons */
+    /* Icons - Duvidas ? Discord: @tur.ko // */
     .ico{
       width:18px;
       height:18px;
@@ -244,50 +244,50 @@
 </head>
 
 <body>
-  <!-- Sprite de ícones SVG (invisível) -->
+  <!-- Sprite de icones SVG (invisivel) - Duvidas ? Discord: @tur.ko // -->
   <svg xmlns="http://www.w3.org/2000/svg" style="position:absolute;width:0;height:0;overflow:hidden">
     <defs>
-      <!-- download/install -->
+      <!-- Icon: download/install - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-download" viewBox="0 0 24 24">
         <path fill="currentColor" d="M5 20h14v-2H5v2zm7-18v10.17l3.59-3.58L17 10l-5 5-5-5 1.41-1.41L11 12.17V2h1z"/>
       </symbol>
 
-      <!-- github -->
+      <!-- Icon: github - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-github" viewBox="0 0 24 24">
         <path fill="currentColor" d="M12 .5C5.7.5.7 5.7.7 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.1c-3.2.7-3.9-1.4-3.9-1.4-.6-1.4-1.4-1.8-1.4-1.8-1.1-.8.1-.8.1-.8 1.2.1 1.9 1.2 1.9 1.2 1.1 1.9 2.9 1.4 3.6 1.1.1-.8.4-1.4.7-1.7-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.4 1.2-3.3-.1-.3-.5-1.5.1-3.1 0 0 1-.3 3.3 1.2 1-.3 2-.4 3.1-.4s2.1.1 3.1.4c2.3-1.5 3.3-1.2 3.3-1.2.6 1.6.2 2.8.1 3.1.8.9 1.2 2 1.2 3.3 0 4.5-2.7 5.5-5.3 5.8.4.3.8 1 .8 2.1v3.2c0 .3.2.7.8.6 4.6-1.5 7.9-5.8 7.9-10.9C23.3 5.7 18.3.5 12 .5z"/>
       </symbol>
 
-      <!-- wrench/tools -->
+      <!-- Icon: wrench/tools - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-tools" viewBox="0 0 24 24">
         <path fill="currentColor" d="M22 19.6 14.9 12.5c.4-1 .5-2 .2-3.1-1-3.1-4.5-4.6-7.4-3.1l3.2 3.2-2.1 2.1-3.2-3.2c-1.5 2.9 0 6.4 3.1 7.4 1.1.3 2.2.3 3.1-.2L19.6 22 22 19.6z"/>
       </symbol>
 
-      <!-- puzzle -->
+      <!-- Icon: puzzle - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-puzzle" viewBox="0 0 24 24">
         <path fill="currentColor" d="M20 13v-2h-2.1c-.3-1.7-1.8-3-3.6-3S11 9.3 10.9 11H8V9H4v4h2v2H4v4h4v-2h2v-2h2v2h2v2h4v-4h-2v-2h2z"/>
       </symbol>
 
-      <!-- link -->
+      <!-- Icon: link - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-link" viewBox="0 0 24 24">
         <path fill="currentColor" d="M3.9 12c0-2.3 1.8-4.1 4.1-4.1h4V6H8C4.7 6 2 8.7 2 12s2.7 6 6 6h4v-1.9H8c-2.3 0-4.1-1.8-4.1-4.1zM9 13h6v-2H9v2zm7-7h-4v1.9h4c2.3 0 4.1 1.8 4.1 4.1s-1.8 4.1-4.1 4.1h-4V18h4c3.3 0 6-2.7 6-6s-2.7-6-6-6z"/>
       </symbol>
 
-      <!-- copy -->
+      <!-- Icon: copy - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-copy" viewBox="0 0 24 24">
         <path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm4 4H8c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 18H8V7h12v16z"/>
       </symbol>
 
-      <!-- shield -->
+      <!-- Icon: shield - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-shield" viewBox="0 0 24 24">
         <path fill="currentColor" d="M12 2 5 5v6c0 5.1 3.7 9.2 7 11 3.3-1.8 7-5.9 7-11V5l-7-3zm0 4.3 4 1.7v3.9c0 3.2-2 5.9-4 7.3-2-1.4-4-4.1-4-7.3V8l4-1.7z"/>
       </symbol>
 
-      <!-- list -->
+      <!-- Icon: list - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-list" viewBox="0 0 24 24">
         <path fill="currentColor" d="M4 6h12v2H4V6zm0 5h12v2H4v-2zm0 5h8v2H4v-2zm14-9h2V5h-2v2zm0 5h2v-2h-2v2zm0 5h2v-2h-2v2z"/>
       </symbol>
 
-      <!-- alert -->
+      <!-- Icon: alert - Duvidas ? Discord: @tur.ko // -->
       <symbol id="i-alert" viewBox="0 0 24 24">
         <path fill="currentColor" d="M12 2 1 21h22L12 2zm-1 7v6h2V9h-2zm0 8v2h2v-2h-2z"/>
       </symbol>
@@ -315,7 +315,7 @@
     </header>
 
     <section class="grid">
-      <!-- Instalação -->
+      <!-- Instalacao - Duvidas ? Discord: @tur.ko // -->
       <article class="card">
         <h2 class="h-icon">
           <svg class="ico" aria-hidden="true"><use href="#i-download"></use></svg>
@@ -369,7 +369,7 @@
         </div>
       </article>
 
-      <!-- Como usar / Avisos -->
+      <!-- Como usar e avisos - Duvidas ? Discord: @tur.ko // -->
       <aside class="card">
         <h2 class="h-icon">
           <svg class="ico" aria-hidden="true"><use href="#i-list"></use></svg>
